# nervici

./: .gitignore  CMakeLists.txt  README  config.h.cmake  fonts.cmake  images.cmake  main.c  main.h  music.cmake  smiles.cmake  sounds.cmake  system.c  system.h  utils.c  utils.h  vorbis.cmake
engine/: audio.c  audio.cpp  audio.h  loader.c  loader.cpp  loader.h  render.c  render.cpp
game/: game.c  game.cpp  game.h  player.c  player.h  world.c  world.cpp  world.h
include/: app.h  basic_defs.h  float.h  fpoint.h  int_type.h  logger.h  main.h  mod.h  mod_runner.h  point.h  system.h  utils.h
include/ais/: ai.h  ai_info.h  gen0.h
include/engine/: audio.h  audio_decoder.h  audio_impl.h  effect_type.h  font_type.h  image_type.h  loader.h  mplayer_decoder.h  music_type.h  render.h  render_semafor.h  smile_faces.h  smile_images.h  smile_set_images.h  sound_profile.h  stat_column.h
include/fakes/: ai.h  ai_info.h  audio_impl.h  death_cause.h  fields.h  fpoint.h  game_frame.h  game_info.h  game_setting.h  glibmm_decl.h  iteam.h  mod.h  mod_info.h  mod_interface.h  mod_runner.h  mod_runner_info.h  options_frame.h  pl_info.h  player.h  pledit_frame.h  point.h  sdl_decl.h  setting.h  smile.h  smile_images.h  smile_setting.h  sound_profile.h  start.h  start_frame.h  statistic.h  team.h  team_info.h  world_item.h
include/fakes/gui/: button.h  canvas.h  checkbox.h  combobox.h  control.h  key_graber.h  label.h  label_button.h  list_item.h  listbox.h  multiline_label.h  numberbox.h  panel.h  scale.h  screen.h  scrollbar.h  scrollport.h  smile_control.h  team_button.h  textbox.h  view.h  vline.h
include/frames/: game_frame.h  options_frame.h  pledit_frame.h  start_frame.h
include/game/: death_cause.h  fields.h  game.h  game_info.h  key_state.h  pl_state.h  player.h  players.h  smile.h  smile_setting.h  smile_type.h  smiles.h  smyle_type.h  start.h  statistic.h  team.h  teams.h  world.h  world_item.h
include/gui/: button.h  canvas.h  checkbox.h  combobox.h  control.h  defaults.h  event.h  event_helper.h  frame.h  horizontal_aling.h  implementor.h  input_control.h  key_graber.h  label.h  label_button.h  list_item.h  listbox.h  listbox_parameters.h  multiline_label.h  numberbox.h  panel.h  scale.h  screen.h  scrollbar.h  scrollbar_parameters.h  scrollport.h  sdl_canvas.h  sdl_screen.h  sdlcanvas.h  smile_control.h  team_button.h  team_colors.h  textbox.h  vertical_aling.h  view.h  vline.h
include/mods/: game_setting.h  get_face.h  iplayer.h  iteam.h  mod.h  mod_info.h  mod_interface.h  mod_runner.h  mod_runner_info.h  mod_specification.h  mods.h  nervici.h  standard_mods.h
include/settings/: pl_info.h  pl_infos.h  pl_type.h  setting.h  settings.h  team_info.h  team_infos.h
mods/: mod_cervici.c  mod_cervici.cpp  mods.h  nervici.h
modules/: FindSDL_gfx.cmake  images.cmake  mods.cmake  music.cmake  nervici.cmake  sounds.cmake
po/: CMakeLists.txt  cs.po  en.po
settings/: plinfo.c  plinfo.h  setting.c  setting.h
src/: app.cpp  app.h  int_type.h  logger.cpp  main.cpp  main.h  nervici.sh.in  system.cpp  system.h  system_defs.h  utils.cpp  utils.h
src/ais/: ai.cpp  gen0.cpp
src/engine/: audio.cpp  audio.h  audio_defs.h  audio_impl.cpp  loader.cpp  loader.h  loader_defs.h  mplayer_decoder.cpp  render.cpp  render.h  render_defs.h  render_semafor.h
src/frames/: frame.cpp  frame.h  game_frame.cpp  game_frame.h  options_frame.cpp  pledit_frame.cpp  start.cpp  start.h  start_frame.cpp  start_frame.h
src/game/: fields.cpp  game.cpp  game.h  game_defs.h  player.cpp  player.h  player_defs.h  players.cpp  players.h  smile.cpp  smiles.cpp  statistic.cpp  team.cpp  teams.cpp  world.cpp  world.h  world_defs.h
src/gui/: button.cpp  button.h  canvas.cpp  canvas.h  checkbox.cpp  combobox.cpp  combobox.h  control.cpp  control.h  defaults.h  event.h  frame.cpp  implementor.cpp  implementor.h  input_control.cpp  input_control.h  key_graber.cpp  label.cpp  label_button.cpp  listbox.cpp  listbox.h  multiline_label.cpp  multiline_label.h  numberbox.cpp  numberbox.h  panel.cpp  scale.cpp  scale.h  screen.cpp  screen.h  scrollbar.cpp  scrollbar.h  scrollport.cpp  scrollport.h  sdl_canvas.cpp  sdl_screen.cpp  sdlcanvas.cpp  smile_control.cpp  smile_control.h  team_button.cpp  (+8 more)
src/mods/: mod_1cervik.cpp  mod_cervici.c  mod_cervici.cpp  mod_interface.cpp  mods.cpp  mods.h  nervici.cpp  nervici.h
src/settings/: pl_info.cpp  pl_infos.cpp  plinfo.cpp  plinfo.h  plinfo_defs.h  setting.cpp  setting.h  setting_defs.h  settings.cpp  team_infos.cpp
